<resources>
    <string name="app_name">covidja</string>
    <string name="enter_username">Enter username</string>
    <string name="malong">Malong</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_password">Enter password</string>
    <string name="username">Username</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>